--- a/src/pug/components/next-page.pug
+++ b/src/pug/components/next-page.pug
@@ -1,5 +1,7 @@
 mixin next-page(href, title = "")
-  .container-lg.layer-next
-    +link(href).block
-      .uppercase Next
-      .h2.font-900= title
+  .layer-next 
+    .container
+      +link(href)
+        .content
+          .uppercase Next
+          .title= title
