--- a/src/pug/components/tile.pug
+++ b/src/pug/components/tile.pug
@@ -2,13 +2,13 @@ mixin tile(value = {})
   - let { title, content, image } = value;
   - let _class = value.class;
 
-  .layer-tile(class=_class)
+  .tile.tile-hover(class=_class)
     if image
       +image(image)
 
-    .layer-tile-footer
+    .tile-content
       if title
-        .layer-tile-title.font-600= title
+        .tile-title.font-600= title
 
       if content
-        .layer-tile-content= content
+        p= content
