--- a/src/pug/pages/404.pug
+++ b/src/pug/pages/404.pug
@@ -14,7 +14,7 @@ block preload
 block content
   .stretch-layer
     .navbar-top-spot
-    .container
+    .stretch-container
       .layout.justify-center
         section
           h1 404, Page Not Found.
