--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,7 +14,7 @@ block banner
 block content
   //- Intro layer
   .container-lg
-    h3.h5.font-600 Hi, I’m Olaoluwa, but people also know me as Joseph.  
+    h3.layer-title Hi, I’m Olaoluwa, but people also know me as Joseph.  
     | For about a decade now, I have actively sought to leave the state of things better than I found it. I am a Mechatronics engineer at heart and on paper. I integrate hardware and software into harmonious alliance to solve societal pain points.
 
     br
@@ -28,7 +28,7 @@ block content
   //- Skills Column layer
   .capsule-layer
     .layout
-      h3.h5.font-600 Tools of the trade
+      h3.layer-title Tools of the trade
       .row.seperate-tools
         .col-6
           h4.underline Hardware Development Tools
@@ -50,7 +50,7 @@ block content
   .capsule-offset.contrast-layer
     .container-xl
       .container.max-w-screen-lg.pb-8
-        h3.h5.font-600 Recent Activities
+        h3.layer-title Recent Activities
         | Here are some of the projects I have worked on. These include some ongoing and finished research projects, personal projects, as well as some old school and work projects I think you should know about.
 
       .row.col-grid
@@ -115,8 +115,8 @@ block content
               title: "Publications",
               class: "layer-box layer-surface block layer-tile-outline",
               image: {
-                src: "cloudinary/aerial-photo-of-brown-mountains",
-                alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash.",
+                src: "cloudinary/joseph-projects/publications/annie-spratt-_dAnK9GJvdY-unsplash",
+                alt: "An image of a set of papers laid on a table by Annie Spratt on Unsplash.",
               }
             })
 
@@ -130,7 +130,7 @@ block content
           overlay: false
         })
       section
-        h3.h5.font-600 Signature
+        h3.layer-title Signature
         .text-above-quote
           | If you are still reading this, you might just want to work with me. Working with me is like eating a quadruple-layer steak-filled poutine lasagna – you are not sure what you’re getting yourself into, but you’re going to have the time of your life, provided you like lasagna of course.
           br
