--- a/src/pug/pages/portfolio.pug
+++ b/src/pug/pages/portfolio.pug
@@ -28,7 +28,6 @@ block content
           +link("/projects/boxer")
             +tile({
               title: "Boxer",
-              class: "layer-box layer-surface block layer-tile-outline",
               content: "An autonomous robotic platform very similar to a conventional vehicle due to its ackerman steering design, and independent suspension.",
               image: {
                 src: "cloudinary/joseph-projects/boxer/03_ADR_Render_04",
@@ -40,7 +39,6 @@ block content
           +link("/projects/battery-manager")
             +tile({
               title: "Battery Manager",
-              class: "layer-box layer-surface block layer-tile-outline",
               content: "A tool built to perform a multitude of experiments on battery cells and packs of different sizes. Rated for 35A, the device is capable of fast charging, cycling, fault induction and recognition and many more due to its customizability.",
               image: {
                 src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
@@ -51,7 +49,6 @@ block content
           +link("/projects/sarbot")
             +tile({
               title: "Search and Rescue Robot (SarBot)",
-              class: "layer-box layer-surface block layer-tile-outline",
               content: "SarBot was a major course project in my final year of undergrad. The objective was to emulate a search and rescue (SaR) operation for a miner trapped underground. The robot had to be semi-autonomous and had to avoid obstacles.",
               image: {
                 src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
@@ -63,7 +60,6 @@ block content
           +link("/projects/ultima-apparel")
             +tile({
               title: "Ultima Apparel",
-              class: "layer-box layer-surface block layer-tile-outline",
               content: "A startup company created by a colleague and I in our undergrad, hoping to reduce the occurrence of lower back and shoulder injuries during work outs. The project eventually morphed into an interesting capstone project and won our team first place in the electrical engineering competition in 2018.",
               image: {
                 src: "cloudinary/joseph-projects/ultima-apparel/Proof_of_Concept_1",
@@ -76,7 +72,6 @@ block content
           +link("/projects/phoenix")
             +tile({
               title: "Phoenix",
-              class: "layer-box layer-surface block layer-tile-outline",
               content: "As part of my job as an engineering intern at Celestica, one of my projects was the design of a new solar panel frame that had interesting features and functions while being cheaper than the older product version.",
               image: {
                 src: "cloudinary/joseph-projects/phoenix/New_Solar_Panel_1-03",
@@ -88,10 +83,9 @@ block content
           +link("/projects/publications")
             +tile({
               title: "Publications",
-              class: "layer-box layer-surface block layer-tile-outline",
               content: "A list of publications I completed while studying for my masters at OntarioTech University.",
               image: {
-                src: "cloudinary/aerial-photo-of-brown-mountains",
-                alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash.",
+                src: "cloudinary/joseph-projects/publications/annie-spratt-_dAnK9GJvdY-unsplash",
+                alt: "An image of a set of papers laid on a table by Annie Spratt on Unsplash.",
               }
             })
