--- a/src/pug/pages/projects/publications.pug
+++ b/src/pug/pages/projects/publications.pug
@@ -10,7 +10,8 @@ block pageInfo
     };
 
 block content
-  .container-lg
+  .navbar-top-spot
+  .container-lg.publication-layer
     h1.h4.font-600.text-center Academic Publications.
     ol.space-y-8
       li 
