--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,7 +4,7 @@
 @use "./components/base.scss";
 @use "./components/navbar.scss";
 @use "./components/style.scss";
-@use "./components/action.scss";
+@use "./components/buttons.scss";
 @use "./components/layout.scss";
 @use "./components/layer.scss";
 @use "./components/transition.scss";
