--- a/src/scss/components/mixins.scss
+++ b/src/scss/components/mixins.scss
@@ -79,8 +79,8 @@ $dark-colors: (
     "invert-white": $black,
     "very-light": #1d2125,
     "light": #525252,
-    "mid-light": $mid-light,
-    "mid": $mid,
+    "mid-light": darken($mid-light, 30%),
+    "mid": darken($mid, 33%),
     "dim": #696873,
     "mid-dark": #bbb8b8,
     "dark": #ddd,
