--- a/src/pug/pages/projects/battery-manager.pug
+++ b/src/pug/pages/projects/battery-manager.pug
@@ -12,7 +12,7 @@ block pageInfo
 block banner
   +banner({
     title: "Project 2: Battery Manager (2018 – Present)",
-    content: "The battery manager is a testing tool built to perform a multitude of experiments on battery cells and packs of different sizes. Rated for 35A, the device is capable of fast charging, cycling, fault induction and recognition and many more due to its customizability.",
+    content: "The battery manager is a testing tool built to perform a multitude of experiments on battery cells and packs of different sizes.",
     image: {
       src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
       alt: "An image of the battery testing workstation box.",
