--- a/src/pug/pages/projects/phoenix.pug
+++ b/src/pug/pages/projects/phoenix.pug
@@ -6,13 +6,13 @@ block pageInfo
       url: "/projects/phoenix",
       name: "phoenix",
       title: "Phoenix — A revamp of a solar panel frame",
-      description: "A solar panel frame I revamped while I interned at Celestica, I named this new frame Phoenix"
+      description: "As part of my job as an engineering intern at Celestica, one of my projects was the design of a new solar panel frame that had interesting features and functions while being cheaper than the older product version."
     };
 
 block banner
   +banner({
     title: "Project 5: Phoenix (2015 - 2016)",
-    content: "A solar panel frame I revamped while I interned at Celestica, I named this new frame Phoenix",
+    content: "As part of my job as an engineering intern at Celestica, one of my projects was the design of a new solar panel frame cheaper and stronger than previous versions.",
     image: {
       src: "cloudinary/joseph-projects/phoenix/New_Solar_Panel_1-03",
       alt: "An image of Joseph Ojo holding a large pane of Solar Panels.",
