--- a/src/pug/pages/projects/sarbot.pug
+++ b/src/pug/pages/projects/sarbot.pug
@@ -12,7 +12,7 @@ block pageInfo
 block banner
   +banner({
     title: "Project 3: SarBot (2018)",
-    content: "A semi-autonomous robot designed to traverse a multi-leveled maze and return to the initial point with a person or object in toe. SarBot was a major course project in my final year of undergrad. The objective was to emulate a search and rescue (SaR) operation for a miner trapped underground. The robot had to be semi-autonomous and had to avoid obstacles.",
+    content: "SarBot was a semi-autonomous robotic project in my final year as an undergrad. The objective was to emulate a search and rescue (SaR) operation for a miner trapped underground.",
     image: {
       src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
       alt: "An image of a 3D model of Sarbot.",
