--- a/src/pug/pages/projects/ultima-apparel.pug
+++ b/src/pug/pages/projects/ultima-apparel.pug
@@ -12,7 +12,7 @@ block pageInfo
 block banner
   +banner({
     title: "Project 4: Ultima Apparel (2016 - 2018)",
-    content: "Ultima Apparel started as a startup company with me and a colleague in our undergrad, hoping to reduce the occurrence of lower back and shoulder injuries during work outs. The project eventually morphed into an interesting capstone project and won our team first place in the electrical engineering competition in 2018.",
+    content: "Ultima Apparel was a company started to reduce the occurrence of lower back and shoulder injuries in labor intensive jobs using a motion capture wearable.",
     image: {
       src: "cloudinary/joseph-projects/ultima-apparel/Proof_of_Concept_1",
       alt: "An image of Ultima Apparels first proof of concept.",
