--- a/src/pug/pages/portfolio.pug
+++ b/src/pug/pages/portfolio.pug
@@ -28,7 +28,7 @@ block content
           +link("/projects/boxer")
             +tile({
               title: "Boxer",
-              content: "An autonomous robotic platform very similar to a conventional vehicle due to its ackerman steering design, and independent suspension.",
+              content: "Boxer is a robotic platform designed as an autonomous delivery vehicle and built for research purposes.",
               image: {
                 src: "cloudinary/joseph-projects/boxer/03_ADR_Render_04",
                 alt: "An image of a rendered robot."
@@ -39,7 +39,7 @@ block content
           +link("/projects/battery-manager")
             +tile({
               title: "Battery Manager",
-              content: "A tool built to perform a multitude of experiments on battery cells and packs of different sizes. Rated for 35A, the device is capable of fast charging, cycling, fault induction and recognition and many more due to its customizability.",
+              content: "The battery manager is a testing tool built to perform a multitude of experiments on battery cells and packs of different sizes.",
               image: {
                 src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
                 alt: "An image of the battery testing workstation box.",
@@ -49,7 +49,7 @@ block content
           +link("/projects/sarbot")
             +tile({
               title: "Search and Rescue Robot (SarBot)",
-              content: "SarBot was a major course project in my final year of undergrad. The objective was to emulate a search and rescue (SaR) operation for a miner trapped underground. The robot had to be semi-autonomous and had to avoid obstacles.",
+              content: "SarBot was a semi-autonomous robotic project in my final year as an undergrad. The objective was to emulate a search and rescue (SaR) operation for a miner trapped underground.",
               image: {
                 src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
                 alt: "An image of a 3D model of Sarbot.",
@@ -60,7 +60,7 @@ block content
           +link("/projects/ultima-apparel")
             +tile({
               title: "Ultima Apparel",
-              content: "A startup company created by a colleague and I in our undergrad, hoping to reduce the occurrence of lower back and shoulder injuries during work outs. The project eventually morphed into an interesting capstone project and won our team first place in the electrical engineering competition in 2018.",
+              content: "Ultima Apparel was a company started to reduce the occurrence of lower back and shoulder injuries in labor intensive jobs using a motion capture wearable.",
               image: {
                 src: "cloudinary/joseph-projects/ultima-apparel/Proof_of_Concept_1",
                 alt: "An image of Ultima Apparels first proof of concept.",
@@ -72,7 +72,7 @@ block content
           +link("/projects/phoenix")
             +tile({
               title: "Phoenix",
-              content: "As part of my job as an engineering intern at Celestica, one of my projects was the design of a new solar panel frame that had interesting features and functions while being cheaper than the older product version.",
+              content: "As part of my job as an engineering intern at Celestica, one of my projects was the design of a new solar panel frame cheaper and stronger than previous versions.",
               image: {
                 src: "cloudinary/joseph-projects/phoenix/New_Solar_Panel_1-03",
                 alt: "An image of Joseph Ojo holding a large pane of Solar Panels.",
@@ -83,7 +83,7 @@ block content
           +link("/projects/publications")
             +tile({
               title: "Publications",
-              content: "A list of publications I completed while studying for my masters at OntarioTech University.",
+              content: "A list of publications I completed while studying for my masters at Ontario Tech University.",
               image: {
                 src: "cloudinary/joseph-projects/publications/annie-spratt-_dAnK9GJvdY-unsplash",
                 alt: "An image of a set of papers laid on a table by Annie Spratt on Unsplash.",
