--- a/src/pug/pages/projects/boxer.pug
+++ b/src/pug/pages/projects/boxer.pug
@@ -12,7 +12,7 @@ block pageInfo
 block banner
   +banner({
     title: "Project 1: Boxer (2019 – Present)",
-    content: "An autonomous robotic platform very similar to a conventional vehicle due to its ackerman steering design, and independent suspension.",
+    content: "Boxer is a robotic platform designed as an autonomous delivery vehicle and built for research purposes.",
     image: {
       src: "cloudinary/joseph-projects/boxer/03_ADR_Render_04",
       alt: "An image of a rendered robot."
