--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -43,11 +43,11 @@
         }
 
         h1 {
-            @apply text-4xl lg:text-7xl;
+            @apply text-4xl sm:text-5xl lg:text-7xl;
         }
 
         h2 {
-            @apply text-lg lg:text-2xl;
+            @apply text-lg sm:text-xl lg:text-2xl;
         }
     }
 
@@ -69,10 +69,10 @@
     }
 
     h1 {
-        @apply font-title font-900 text-3xl sm:text-5xl md:text-6xl mb-4;
+        @apply font-title font-900 text-4xl sm:text-5xl md:text-6xl mb-4;
         line-height: 1;
 
-        @screen md {
+        @screen lg {
             @apply leading-none mb-8;
         }
     }
@@ -142,7 +142,7 @@ html[theme="dark"] {
         @apply bg-gray-800 dark:bg-gray-700  shadow-xl;
         @apply relative overflow-hidden rounded-xl;
         @apply mx-auto w-full max-w-screen-xl;
-        @apply px-6 md:px-16 py-2 md:py-5 leading-loose;
+        @apply px-6 md:px-16 py-3 md:py-5 leading-loose;
 
         transition: background-color #{$transitionDuration} ease,
             color #{$transitionDuration} ease;
@@ -343,6 +343,7 @@ blockquote {
 
     &-title {
         @apply text-xl md:text-2xl font-600 my-3;
+        font-size: theme("spacing.5");
     }
 
     &-next {
@@ -353,7 +354,7 @@ blockquote {
         }
 
         .container {
-            @apply max-w-screen-lg;
+            @apply max-w-screen-lg px-2;
         }
 
         .content {
